# cdk-pipelines-demo

./: .gitignore  Makefile  README.md  TODO.md  app.py  app_dev.py  cdk.context.json  docker-compose.yml  pyproject.toml
src/assets/api-image/: Dockerfile  pyproject.toml
src/assets/api-image/src/: wsgi.py
src/assets/api-image/src/models/: owners.py  pets.py
src/assets/api-image/src/routes/: index.py  owners.py  pets.py  schemas.py
src/assets/api-image/tests/: conftest.py
src/assets/api-image/tests/unit/routes/: test_owners.py  test_pets.py
src/constructs/: api.py
src/stacks/: api.py  code_pipeline.py  dev.py  pipeline.py
