[tool.poetry]
name = "api-image"
version = "0.1.0"
description = "API Image"
authors = ["Justin Stewart <justin@justinstewart.dev>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
pydantic = "^2.9.1"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
